background images and got rid of all posts at bottom of home

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -3,9 +3,9 @@
  
       <%  for(let date of tldates){ %>
         
-        <div class="d-flex flex-column bd-highlight mb-3 border border-4 border-info rounded">
-          <div class="p-2 bd-highlight ">
-            <div class="d-flex flex-row bd-highlight ">
+        <div class="d-flex flex-column bd-highlight mb-3 border border-4 border-info rounded" id="daterow">
+          <div class="p-2 bd-highlight " >
+            <div class="d-flex flex-row bd-highlight" >
             
             
             
@@ -47,11 +47,15 @@
                         </div>  
                       </div>
                       <div class="col-md-6">
-                        <div class="card-body">
+                        <div class="card-body" id="cardbg">
                           <h5 class="card-title"><%= entries.title%></h5>
                           <h6 class="card-subtitle mb-2 text-muted">Entered on: <%= entries.displayentrydate%></h6>
-                          <p class="card-text"><%= entries.body%></p>
-                          <div class="p-2 bd-highlight"><form action="/entry/edit/<%=entries._id%>" method="GET"><button class="btn btn-warning">Edit This Entry</button></form></div>
+                          <p class="card-text"><%= entries.body.substr(0,175)%>
+                            <%if(entries.body.length>175){  %> 
+                              ...
+                              <% } %> 
+                            </p>
+                          <div class="p-2 bd-highlight"><form action="/entry/edit/<%=entries._id%>" method="GET"><button class="btn btn-warning">Open This Entry</button></form></div>
                           <div class="p-2 bd-highlight"><form action="/entry/delete/<%=entries._id%>" method="GET"><button class="btn btn-danger">Delete Entry</button></form></div>
                           
                         </div>
@@ -70,8 +74,12 @@
                         <div class="card-body">
                           <h5 class="card-title"><%= entries.title%></h5>
                           <h6 class="card-subtitle mb-2 text-muted">Entered on: <%= entries.displayentrydate%></h6>
-                          <p class="card-text"><%= entries.body%></p>
-                          <div class="p-2 bd-highlight"><form action="/entry/edit/<%=entries._id%>" method="GET"><button class="btn btn-warning">Edit This Entry</button></form></div>
+                          <p class="card-text"><%= entries.body.substr(0,175)%>
+                          <%if(entries.body.length>175){  %> 
+                            ...
+                            <% } %> 
+                          </p>
+                          <div class="p-2 bd-highlight"><form action="/entry/edit/<%=entries._id%>" method="GET"><button class="btn btn-warning">Open This Entry</button></form></div>
                           <div class="p-2 bd-highlight"><form action="/entry/delete/<%=entries._id%>" method="GET"><button class="btn btn-danger">Delete Entry</button></form></div>
                           
                           
@@ -90,49 +98,7 @@
          
 
 
-  <h1>all posts</h1>
-  <div class="d-flex p-2 bd-highlight">
-    <div class="d-flex flex-row-reverse bd-highlight">
-      <%  for(let date of tldates){ %>
-        <%  for(let entries of date.entries){ %>
-         
-    <div class="p-2 bd-highlight">
-      <div class="card" style="width: 18rem;">
-        <%if(entries.images[0]){%> 
-        
-          <div id="EntryCarouselImage" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <% entries.images.forEach((image, i) => { %> 
-                    <div class="carousel-item <%= i === 0 ? "active" :"" %>">
-                        <img src="<%=image.url%>" class="d-block w-100" alt="...">
-                      </div>
-                    <% }) %> 
-            </div>
-            <% if(entries.images.length > 1){ %> 
-            <a class="carousel-control-prev" href="#EntryCarouselImage" role="button" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#EntryCarouselImage" role="button" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </a>
-            <% } %> 
-          </div>  
-        <% } %> 
-        <div class="card-body">
-          <h5 class="card-title"><%= entries.title%></h5>
-          <h6 class="card-subtitle mb-2 text-muted">Entered on:<%= entries.entrydate%></h6>
-          <p class="card-text"><%= entries.body%></p>
-          <a href="/entry/delete/<%=entries._id%>" method="POST" class="card-link">Delete Entry</a>
-          <form action="/entry/edit/<%=entries._id%>" method="GET"><button>Edit This Entry</button></form>
-        
-        </div>
-      </div>
-    </div>
- <% }%><% }%>
-</div>
-</div>
+  
 
 
 
