--- a/views/pages/splashpage.ejs
+++ b/views/pages/splashpage.ejs
@@ -8,7 +8,7 @@
     </div>
 
     <div class="col-md-6"> 
-        <form action="/signup" method="GET"><button class="btn btn-success btn-lg">Log In</button></form>
+        <form action="/login" method="GET"><button class="btn btn-success btn-lg">Log In</button></form>
     </div>
 
     
