fixed navbar issues and removed login flash message

--- a/views/pages/editentry.ejs
+++ b/views/pages/editentry.ejs
@@ -47,7 +47,7 @@
   </div>
 
     <div class="mb-3 col-4">
-      <button>Update Entry</button>
+      <button>Save Entry</button>
     </div>
   </div>  
 </form>
