--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,23 +1,32 @@
 <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="/timeline">Timeline</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-       
-          <div class="navbar-nav ml-auto" >
-            <% if(!currentUser){ %> 
-            <a class="nav-link" href="/login">Log In</a>
-            <a class="nav-link" href="/signup">Sign Up</a>
-            <% } else { %>
-              <a class="nav-link active" href="/home">Home</a>
-              <a class="nav-link" href="/newentry">Add to Timeline</a>
-            <a class="nav-link" href="/logout">Log Out</a>
-            
-           
-            <% } %>
+  <div class="container-fluid">
+    <a class="navbar-brand" href="/timeline">Timeline</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+  
+     
+        
+          <% if(!currentUser){ %>
+            <div class="navbar-nav ms-auto">
+
+          <a class="nav-link" href="/login">Log In</a>
+          <a class="nav-link" href="/signup">Sign Up</a>
         </div>
-      </div>
+          <% } else { %>
+            <div class="navbar-nav">
+              <a class="nav-link" href="/home">Home</a>
+              <a class="nav-link" href="/newentry">Add to Timeline</a>
+            </div>
+            <div class="navbar-nav ms-auto">
+
+            
+          <a class="nav-link" href="/logout">Log Out</a>
+        </div>
+         
+          <% } %>
+      
     </div>
-  </nav>
+  </div>
+</nav>
